--- a/src/app/Elementos/jugador/jugador.component.html
+++ b/src/app/Elementos/jugador/jugador.component.html
@@ -1,11 +1,20 @@
 <h2>Jugador - suma: {{sumaCartas}}</h2>
 <div class="envoltorio">
-  <div id="cartas-jugador" *ngFor="let item of this.mazoService.devolverArrayImagenesJugador(); let i = index">
+  <!-- <div id="cartas-jugador" *ngFor="let item of this.mazoService.devolverArrayImagenesJugador(); let i = index">
     <img [src]="this.mazoService.devolverArrayImagenesJugador()[i]" />
+  </div> -->
+
+  <div id="cartas-jugador" *ngFor="let item of arrayImagenesJugador; let i = index">
+    <img [src]="arrayImagenesJugador[i]" />
   </div>
+
 </div>
 
+<button type="button" (click)="seguir()"  class="btn btn-success">Seguir</button>
+<button type="button"  class="btn btn-danger">Parar</button>
+
+<!-- 
 <div class="container">
   <app-boton-parar></app-boton-parar>
   <app-boton-seguir (onBotonSeguir)="sumarValorCarta($event)" ></app-boton-seguir>
-</div>
+</div> -->
