--- a/src/app/Elementos/mesa/mesa.component.html
+++ b/src/app/Elementos/mesa/mesa.component.html
@@ -6,5 +6,8 @@
   <div id="jugador" class="container">
         <app-jugador (onPuntosJugador)="capturarPuntosJugador($event)" (onPararJugador)="cambiarBandera($event)" (onReiniciar)="reiniciar()"></app-jugador>
   </div>
+  <div class="container">
+    <button type="button" (click)="reiniciar()" class="btn btn-danger">Reiniciar Juego</button>
+  </div>
 
 
