--- a/src/app/Elementos/mesa/mesa.component.html
+++ b/src/app/Elementos/mesa/mesa.component.html
@@ -7,7 +7,7 @@
         <app-jugador (onPuntosJugador)="capturarPuntosJugador($event)" (onPararJugador)="cambiarBandera($event)" (onReiniciar)="reiniciar()"></app-jugador>
   </div>
   <div class="container">
-    <button type="button" (click)="reiniciar()" class="btn btn-danger">Reiniciar Juego</button>
+    <button type="button" (click)="reiniciar()" class="btn btn-dark">Reiniciar Juego</button>
   </div>
 
 
