--- a/src/app/Elementos/login/login.component.html
+++ b/src/app/Elementos/login/login.component.html
@@ -9,6 +9,14 @@
           <input type="password" class="form-control" id="txtPass" name="txtPass">
         </div>
 
+        <div class="mb-3">
+          <label for="disabledSelect" class="form-label">Seleccionar Rol</label>
+          <select id="disabledSelect" class="form-select">
+            <option>Rol Administrador</option>
+            <option>Rol Jugador</option>
+          </select>
+        </div>
+
         <button type="button" class="btn btn-primary">Ingresar</button>
       </form>
 </div>
