--- a/src/app/Elementos/login/login.component.html
+++ b/src/app/Elementos/login/login.component.html
@@ -19,4 +19,8 @@
 
         <button type="button" class="btn btn-primary">Ingresar</button>
       </form>
+
+      <p>NO  FUNCIONAL ... EN UNA PROXIMA ENTREGA</p>
 </div>
+
+
