--- a/src/app/Elementos/mesa/mesa.component.html
+++ b/src/app/Elementos/mesa/mesa.component.html
@@ -1,4 +1,4 @@
-<div style="background-color:#175234;">
+<div >
   <div id="banca" class="container">
       <app-banca [banderaJugadorParo]="banderaJugador"  [puntosJugador]="puntosJugador" ></app-banca>
   </div>
