--- a/src/app/Elementos/home/home.component.html
+++ b/src/app/Elementos/home/home.component.html
@@ -1,6 +1,7 @@
-<div class="container">
-    <h2>Integrantes del Equipo</h2>
-    <table class="table">
+<div class="container col-md-3">
+    <h2 class="text-center">Integrantes del Equipo</h2>
+    <hr>
+    <table class="table table-striped">
         <thead>
           <tr>
             <th scope="col">#</th>
