--- a/src/app/Elementos/login/login.component.html
+++ b/src/app/Elementos/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container col-md-6">
     <form>
         <div class="mb-3">
           <label for="txtLogin" class="form-label">Cuenta Login</label>
