tpi final con fondo y todo

--- a/src/app/Elementos/banca/banca.component.html
+++ b/src/app/Elementos/banca/banca.component.html
@@ -1,4 +1,4 @@
-<h2>Banca  suma: {{sumaCartasBanca}} </h2>
+<h2 class="text-white">Banca  suma: {{sumaCartasBanca}} </h2>
 <!-- <br>
 bandera si el jugador paro =>  {{banderaJugadorParo}}
 <br>
