--- a/src/app/Elementos/login/login.component.html
+++ b/src/app/Elementos/login/login.component.html
@@ -1,4 +1,9 @@
-<div class="container col-md-6">
+
+  <body>
+    
+ 
+
+<div class="container col-md-6  ">
     <form>
         <div class="mb-3">
           <label for="txtLogin" class="form-label">Cuenta Login</label>
@@ -24,3 +29,5 @@
 </div>
 
 
+
+</body>
