--- a/src/app/Elementos/home/home.component.html
+++ b/src/app/Elementos/home/home.component.html
@@ -1,3 +1,9 @@
+
+  <body>
+    
+
+
+
 <div class="container col-md-3">
     <h2 class="text-center">Integrantes del Equipo</h2>
     <hr>
@@ -17,4 +23,11 @@
 
         </tbody>
       </table>
+
+      <p>*Kevin Pineda solo cursa Laboratorio 4.</p>
+      <p>*Guillermo Cabrera solo cursa Diseño y Administracion de Base de Datos</p>
 </div>
+
+
+</body>
+
