--- a/src/app/Elementos/mesa/mesa.component.css
+++ b/src/app/Elementos/mesa/mesa.component.css
@@ -3,6 +3,7 @@
 }
 
 .mesa{
-    background-color: rgb(60, 151, 121);
+    background-image: url("https://lpemnoticias.cl/wp-content/uploads/2021/10/blackjack_board.jpg");
     background-size: 100%;
+    height: 100vh
 }
