--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,21 @@
 
 <nav class="navbar navbar-expand-lg bg-secondary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">TPI Diseno Base de Datos</a>
+    <a class="navbar-brand" href="#">TPI Diseño y Administración de Base de Datos</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" routerLink="home">Integrantes</a>
+          <a class="nav-link" routerLinkActive="active" routerLink="integrantes">Integrantes</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" routerLink="login">Login</a>
+          <a class="nav-link" routerLinkActive="active" routerLink="login">Login</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="mesa">Mesa</a>
+          <a class="nav-link" routerLinkActive="active" routerLink="mesa">Mesa</a>
         </li>
 
         <!-- <li class="nav-item">
