--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,13 +14,13 @@
         <li class="nav-item">
           <a class="nav-link" routerLinkActive="active" routerLink="login">Login</a>
         </li>
+
+
         <li class="nav-item">
           <a class="nav-link" routerLinkActive="active" routerLink="mesa">Mesa</a>
         </li>
 
-        <!-- <li class="nav-item">
-          <a class="nav-link disabled">Disabled</a>
-        </li> -->
+        <button class="btn btn-danger" (click)="logout()" >Logout</button>
       </ul>
     </div>
   </div>
