--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,9 @@
         <li class="nav-item">
           <a class="nav-link" routerLinkActive="active" routerLink="integrantes">Integrantes</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLinkActive="active" routerLink="alta">Registrarse</a>
+        </li>
 
         <li class="nav-item">
           <a class="nav-link" routerLinkActive="active" routerLink="login">Login</a>
